--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="container">
         <ul>
             <li >
-                <img class="note"  src="/images/1.jpg" alt="2000">
-                <img class="mult"  src="/images/mult.png" alt="multiplication">
+                <img class="note"  src="images/1.jpg" alt="2000">
+                <img class="mult"  src="images/mult.png" alt="multiplication">
                 <form action="#" id="form1">
                    <input type="number" id="firstnote" value="0" min="0" class="inputbox"><p class="para">=</p><input id="twothousandnote" type="number" class="outputbox" value="0">
                 </form>
