--- a/index.html
+++ b/index.html
@@ -24,48 +24,48 @@
 
             </li>
             <li>
-                <img class="note"   src="/images/2.jpeg" alt="2000">
-                <img class="mult"src="/images/mult.png" alt="multiplication">
+                <img class="note"   src="images/2.jpeg" alt="2000">
+                <img class="mult"src="images/mult.png" alt="multiplication">
                 <form action="#" id="form2">
                    <input type="number" id="secondnote" value="0" min="0" class="inputbox"><p class="para">=</p><input type="number" id="fivehundrednote" class="outputbox" value="0">
                 </form>
 
             </li>
             <li>
-                <img class="note"   src="/images/3.jpg" alt="2000">
-                <img class="mult"src="/images/mult.png" alt="multiplication">
+                <img class="note"   src="images/3.jpg" alt="2000">
+                <img class="mult"src="images/mult.png" alt="multiplication">
                 <form action="#" id="form3">
                    <input type="number" id="thirdnote" value="0" min="0" class="inputbox" ><p class="para">=</p><input type="number" id="twohundrednote" class="outputbox" value="0">
                 </form>
  
             </li>
             <li>
-                <img class="note"   src="/images/4.jpg" alt="2000">
-                <img class="mult" src="/images/mult.png" alt="multiplication">
+                <img class="note"   src="images/4.jpg" alt="2000">
+                <img class="mult" src="images/mult.png" alt="multiplication">
                 <form action="#" id="form4">
                    <input type="number" id="fourthnote" value="0" min="0" class="inputbox"><p class="para">=</p><input type="number" id="hundrednote" class="outputbox" value="0">
                 </form>
 
             </li>
             <li>
-                <img class="note"   src="/images/5.jpg" alt="2000">
-                <img class="mult"src="/images/mult.png" alt="multiplication">
+                <img class="note"   src="images/5.jpg" alt="2000">
+                <img class="mult"src="images/mult.png" alt="multiplication">
                 <form action="#" id="form5">
                    <input type="number" id="fifthnote" value="0" min="0" class="inputbox"><p class="para">=</p><input type="number" id="fiftynote" class="outputbox" value="0">
                 </form>
 
             </li>
             <li>
-                <img class="note" src="/images/6.jpg" alt="2000">
-                <img class="mult" src="/images/mult.png" alt="multiplication">
+                <img class="note" src="images/6.jpg" alt="2000">
+                <img class="mult" src="images/mult.png" alt="multiplication">
                 <form action="#" id="form6">
                    <input type="number" id="sixthnote" value="0" min="0" class="inputbox"><p class="para">=</p><input type="number" id="twentynote" class="outputbox" value="0">
                 </form>
 
             </li>
             <li>
-                <img class="note"  src="/images/7.jpg" alt="2000">
-                <img class="mult" src="/images/mult.png" alt="multiplication">
+                <img class="note"  src="images/7.jpg" alt="2000">
+                <img class="mult" src="images/mult.png" alt="multiplication">
                 <form action="#" id="form7">
                    <input type="text" id="seventhnote" value="0" min="0" class="inputbox"><p class="para">=</p><input type="text" id="tennote" class="outputbox" value="0">
                 </form>
