--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     
     <title>Cash Counter-By Shreyas Raut</title>
 </head>
@@ -85,6 +85,6 @@
         </form>
     </footer>
     <p id="totalrupeesinwords">Total Rupees in words</p>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
